--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-svelte",
+  "name": "frontend-monorepo-poc",
   "private": true,
   "scripts": {
     "build": "turbo run build",
