--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,8 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '>=18'
           cache: 'npm'
-          registry-url: 'https://registry.npmjs.org/'
 
       - name: Install dependencies
         run: npm install
