--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm config get registry
+          npm config set registry https://registry.npmjs.org/
           npm install
 
       - name: Build
