found the problem?

--- a/apps/sk-app/package.json
+++ b/apps/sk-app/package.json
@@ -16,7 +16,7 @@
 		"test:unit": "vitest"
 	},
 	"dependencies": {
-		"@repo/ui-react-sk": "*"
+		"@repo/ui-sk": "*"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "*",
