--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-turbo-
 
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-node-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -55,19 +47,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-turbo-
 
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-node-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: '>=18'
           cache: 'npm'
 
-      - name: Build
+      - name: Test
         run: npm run lint # Don't have test, just run lint for now
