--- a/apps/sk-app/package.json
+++ b/apps/sk-app/package.json
@@ -22,6 +22,7 @@
 		"@repo/eslint-config": "*",
 		"@repo/typescript-config": "*",
 		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"prettier": "^3.4.2",
