--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,43 @@ jobs:
       - name: Test
         run: npm run lint # Don't have test, just run lint for now
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: |
+            apps/react-app/dist
+            apps/sk-app/build
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-output
+          path: dist
 
-      - name: Deploy to production
+      - name: Prepare pages content
         run: |
-          echo "Add your deployment commands here"
-          # Example: npm run deploy
+          ls -la dist
+          mkdir -p pages
+          mv dist/react-app/dist pages/react-app
+          mv dist/sk-app/build pages/sk-app
+
+      - name: Upload to GitHub Pages
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: pages
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
