--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
 
       - name: Prepare pages content
         run: |
+          ls -la dist
           mkdir -p pages
           mv dist/react-app/dist pages/react-app
           mv dist/sk-app/build pages/sk-app
