--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,9 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
+          find apps/sk-app/build
 
       - name: Test
         run: npm run lint # Don't have test, just run lint for now
