--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: |
-          npm run build
-          find apps/sk-app
+        run: npm run build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
