--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           name: build-output
           path: |
             apps/react-app/dist
-            apps/sk-app/build
+            apps/svelte-app/build
             apps/shell-app/build
 
       - name: Test
@@ -67,7 +67,7 @@ jobs:
           ls -la dist
           mkdir -p pages
           mv dist/react-app/dist pages/react-app
-          mv dist/sk-app/build pages/sk-app
+          mv dist/svelte-app/build pages/svelte-app
           mv dist/shell-app/build pages/shell-app
 
       - name: Upload to GitHub Pages
