--- a/apps/svelte-app/package.json
+++ b/apps/svelte-app/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sk-app",
+	"name": "svelte-app",
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
@@ -16,7 +16,7 @@
 		"test:unit": "vitest"
 	},
 	"dependencies": {
-		"@repo/ui-sk": "*"
+		"@repo/ui-svelte": "*"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "*",
