more better names

--- a/apps/shell-app/package.json
+++ b/apps/shell-app/package.json
@@ -16,7 +16,7 @@
 		"test:unit": "vitest"
 	},
 	"dependencies": {
-		"@repo/ui-svelte": "*"
+		"@repo/svelte-components": "*"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "*",
