--- a/apps/react-app/package.json
+++ b/apps/react-app/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
-    "@repo/ui-react": "*",
+    "@repo/react-components": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
